--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,12 @@
       <input type="email" name="email">
       <input type="text" name="company">
       <input type="text" name="phone">
-      <textarea name="message"></textarea>
+      <select name="demo-simple-select"></select>
+      <input type="text" name="help">
+    </form>
+    <form name="checklist" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text"  name="name">
+      <input type="email" name="email">
     </form>
     <div id="root"></div>
     <!--
