service field name

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       <input type="email" name="email">
       <input type="text" name="company">
       <input type="text" name="phone">
-      <select name="demo-simple-select"></select>
+      <select name="service"></select>
       <input type="text" name="help">
     </form>
     <form name="checklist" netlify netlify-honeypot="bot-field" hidden>
