--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       <input type="text"  name="firstname">
       <input type="email" name="email">
       <input type="text" name="company">
-      <input type="text" name="phone">
+      <input type="text" name="phonenumber">
       <select name="service"></select>
       <input type="text" name="help">
     </form>
